make data sources page work a little bit